2021-05-12  Eduardo Ochs  <eduardoochs@gmail.com>

	* eev-intro.el (find-refining-intro, find-here-links-intro): added
	several "[Video links:]" blocks.

	* eev-hydras.el: new file.

2021-05-09  Eduardo Ochs  <eduardoochs@gmail.com>

	* eev-tlinks.el (ee-psnevideo-download-if-needed): renamed to
	`ee-psne-if-needed'.
	(ee-psnevideo-download): renamed to `ee-psne-download'.
	(ee-psnevideo-download0): renamed to `ee-psne-download0'.
	(ee-psnevideo-links): rewritten.

	* eev-template0.el (ee-template00): added a `save-match-data'.

2021-05-06  Eduardo Ochs  <eduardoochs@gmail.com>

	* eev-beginner.el: rewrote the comments.

	* eev-intro.el (find-pdf-like-intro): rewrote the section 12 and
	renamed it to "12. Other ways to generate `code-pdf'-pairs".

2021-05-05  Eduardo Ochs  <eduardoochs@gmail.com>

	* eev-intro.el (find-brxxx-intro, find-eev-quick-intro)
	(find-pdf-like-intro, find-eev-quick-intro): added several "[Video
	links:]" blocks.

	* eev-audiovideo.el (find-eev2019video, find-eev2020video)
	(find-eevnavvideo, find-eevtemplvideo, find-eevfherelvideo)
	(find-eevtestblocksvideo): make them interactive.

2021-05-04  Eduardo Ochs  <eduardoochs@gmail.com>

	* eev-intro.el (find-eev-install-intro): new section: "5.1. Using
	the tarball". The old section "5.1. Using the git repository" is
	now 5.2, and the old section "5.2. Installation quirks" is now
	5.3.
	(find-eev-quick-intro): rewrote the section "1. Installing eev".

2021-04-23  Eduardo Ochs  <eduardoochs@gmail.com>

	* eev-intro.el (find-videos-intro): rewrote the sections "2. Short
	links to eev video tutorials" and "3. Some `find-eevvideo-links'".
	(find-eev-quick-intro): added some "[Video links:]" blocks.

2021-04-22  Eduardo Ochs  <eduardoochs@gmail.com>

	* eev-audiovideo.el (find-eev2019video, find-eev2020video)
	(find-eevnavvideo, find-eevtemplvideo, find-eevfherelvideo)
	(find-eevtestblocksvideo): new functions.

2021-04-21  Eduardo Ochs  <eduardoochs@gmail.com>
